# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Qaqatua\EchoController;
+use App\Http\Controllers\Qaqatua\ProjectController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -9,10 +10,12 @@ Route::get('/user', function (Request $request) {
 })->middleware('auth:sanctum');
 
 
-Route::post('/encrypt', [EchoController::class, 'encrypt'])
-    ->name("encrypt");
-    //->middleware('auth:sanctum');
+Route::middleware('auth:sanctum')->group( function () {
+    Route::resource('projects', ProjectController::class);
 
-Route::post('/decrypt', [EchoController::class, 'decrypt'])
-    ->name("decrypt");
-//->middleware('auth:sanctum');
+    Route::post('/encrypt', [EchoController::class, 'encrypt'])
+        ->name("encrypt");
+
+    Route::post('/decrypt', [EchoController::class, 'decrypt'])
+        ->name("decrypt");
+});
