# storage/api-docs/api-docs.json
@@ -75,6 +75,58 @@
                     }
                 }
             }
+        },
+        "/api/projects": {
+            "get": {
+                "operationId": "getProjects",
+                "responses": {
+                    "200": {
+                        "description": "The project list"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "summary": "Create a project",
+                "operationId": "95460120486228ab121d2a6b1a365c43",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "privkey": {
+                                        "type": "string"
+                                    },
+                                    "pubkey": {
+                                        "type": "string"
+                                    },
+                                    "fields": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
